tests/baselines/reference/parserComputedPropertyName17.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName17.ts(1,15): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName17.ts (1 errors) ====
    var v = { set [e](v) { } }
                  ~~~
!!! error TS9002: Computed property names are not currently supported.